--- a/src/components/shared/BentoGrid.astro
+++ b/src/components/shared/BentoGrid.astro
@@ -25,7 +25,7 @@ const t = useTranslations(lang);
         <div
           class="relative flex h-full flex-col overflow-hidden rounded-[calc(var(--radius-lg)+1px)] lg:rounded-l-[calc(2rem+1px)]"
         >
-          <div class="px-8 pt-8 pb-3 sm:px-10 sm:pt-10 sm:pb-0">
+          <div class="px-8 pt-8 pb-6 sm:px-10 sm:pt-10 sm:pb-8">
             <p
               class="mt-2 text-lg font-medium tracking-tight text-foreground max-lg:text-center"
             >
@@ -38,7 +38,7 @@ const t = useTranslations(lang);
           <div
             class="@container relative min-h-120 w-full grow max-lg:mx-auto max-lg:max-w-sm"
           >
-            <div class="px-8 pb-8 sm:px-10 sm:pb-10">
+            <div class="px-8 pt-4 pb-8 sm:px-10 sm:pt-6 sm:pb-10">
               <img
                 src="/images/home-page/Cuarto Limpio Sala Blanca ISO 14644.JPG"
                 alt="Cuarto limpio sala blanca ISO 14644 Star Filters"
@@ -61,7 +61,7 @@ const t = useTranslations(lang);
         <div
           class="relative flex h-full flex-col overflow-hidden rounded-[calc(var(--radius-lg)+1px)] max-lg:rounded-t-[calc(2rem+1px)]"
         >
-          <div class="px-8 pt-8 sm:px-10 sm:pt-10">
+          <div class="px-8 pt-8 pb-6 sm:px-10 sm:pt-10 sm:pb-8">
             <p
               class="mt-2 text-lg font-medium tracking-tight text-foreground max-lg:text-center"
             >
@@ -72,7 +72,7 @@ const t = useTranslations(lang);
             </p>
           </div>
           <div
-            class="flex flex-1 items-center justify-center px-8 max-lg:pt-10 max-lg:pb-12 sm:px-10 lg:pb-2"
+            class="flex flex-1 items-center justify-center px-8 max-lg:pt-12 max-lg:pb-12 sm:px-10 sm:pt-8 lg:pb-2"
           >
             <img
               src="/images/home-page/Filtros%20de%20aire.png"
@@ -94,7 +94,7 @@ const t = useTranslations(lang);
         <div
           class="relative flex h-full flex-col overflow-hidden rounded-[calc(var(--radius-lg)+1px)]"
         >
-          <div class="px-8 pt-8 sm:px-10 sm:pt-10">
+          <div class="px-8 pt-8 pb-6 sm:px-10 sm:pt-10 sm:pb-8">
             <p
               class="mt-2 text-lg font-medium tracking-tight text-foreground max-lg:text-center"
             >
@@ -105,9 +105,9 @@ const t = useTranslations(lang);
             </p>
           </div>
           <div class="@container flex flex-1 items-center max-lg:py-6 lg:pb-4">
-            <div class="w-full px-8 pb-10 sm:px-10">
+            <div class="w-full px-8 pt-4 pb-10 sm:px-10 sm:pt-6">
               <img
-                src="/images/home-page/Validación Cuartos Limpios.jpg"
+                src="/images/home-page/Validacion Cuartos Limpios.jpg"
                 alt="Validación de cuartos limpios Star Filters"
                 class="w-full h-full rounded-lg object-cover shadow-sm"
               />
@@ -130,7 +130,7 @@ const t = useTranslations(lang);
         <div
           class="relative flex h-full flex-col overflow-hidden rounded-[calc(var(--radius-lg)+1px)] max-lg:rounded-b-[calc(2rem+1px)] lg:rounded-r-[calc(2rem+1px)]"
         >
-          <div class="px-8 pt-8 pb-3 sm:px-10 sm:pt-10 sm:pb-0">
+          <div class="px-8 pt-8 pb-6 sm:px-10 sm:pt-10 sm:pb-8">
             <p
               class="mt-2 text-lg font-medium tracking-tight text-foreground max-lg:text-center"
             >
@@ -141,7 +141,7 @@ const t = useTranslations(lang);
             </p>
           </div>
           <div class="relative min-h-120 w-full grow">
-            <div class="px-8 pb-8 sm:px-10 sm:pb-10">
+            <div class="px-8 pt-4 pb-8 sm:px-10 sm:pt-6 sm:pb-10">
               <img
                 src="/images/home-page/Filtros%20de%20estrella%20productos.png"
                 alt="Productos Star Filters para cuartos limpios"
