fix: permitir subida de imágenes al crear nuevos artículos de blog
- Actualizado endpoint /api/blog/upload-image.ts para manejar blogs nuevos
- Genera UUID temporal cuando blogId='new' sin requerir que exista en BD
- Cambiado blogId de 'temp-blog-id' a 'new' en página de creación
- Mensajes contextuales según si es blog nuevo o existente
- Resuelve error 'Artículo del blog no encontrado' al crear artículos

--- a/src/pages/admin/blog/add/index.astro
+++ b/src/pages/admin/blog/add/index.astro
@@ -423,7 +423,7 @@ const errorDetails = url.searchParams.get('details');
           Imagen Destacada
         </h2>
 
-        <BlogImageUploader client:load blogId="temp-blog-id" />
+        <BlogImageUploader client:load blogId="new" />
         <input type="hidden" id="featured-image-input" name="featured_image" value="" />
       </div>
 
